# catch_mind

./: CMakeLists.txt  GAME_SPEC.md  Makefile  README.md  deploy.sh
boot/: README.md
include/: bgm.h  display.h  game.h  wordbank.h
scripts/: check_nfs.sh  png2ppm.py
src/: bgm.cpp  display.cpp  display_qt.cpp  fb_server.c  game.cpp  main.cpp  net_ping.cpp
